# ollama-local-serve

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  claude_code_prompt.md  docker-compose.dev.yml  docker-compose.yml  example.py  langgraph_react_agent_example.py  mcp_server_config.json  pyproject.toml  requirements-api.txt  requirements.txt  router_config.yaml  test_langgraph_react_agent.py
.github/: dependabot.yml
docs/: API_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  DOCKER.md  GPU_TESTING_GUIDE.md  INSTALLATION.md  KUBERNETES.md  LANGCHAIN.md  MONITORING.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: AppContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAutoRefresh.js  useFetchStats.js  (+3 more)
k8s/: Chart.yaml  local-databases.yaml  values-local.yaml  values.yaml
k8s/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  secret.yaml  serviceaccount.yaml
ollama_local_serve/: __init__.py  client.py  config.py  mcp_server.py  service.py
ollama_local_serve/api/: benchmark.py  benchmark_models.py  cache.py  cache_models.py  conversation.py  conversation_models.py  dependencies.py  gpu_monitor.py  metrics_collector.py  middleware.py  models.py  server.py  structured.py  template_models.py  templates.py  websocket.py  websocket_models.py
ollama_local_serve/exporters/: clickhouse_exporter.py  postgres_exporter.py
ollama_local_serve/router/: __init__.py  config.py  router.py
schemas/: clickhouse_init.sql  postgres_init.sql
(+38 files in other folders)
